--- a/Traffic-lights/src/main/resources/StartMenu.fxml
+++ b/Traffic-lights/src/main/resources/StartMenu.fxml
@@ -2,13 +2,17 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Text?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="600.0" minWidth="800.0">
     <center>
         <VBox spacing="20" alignment="CENTER">
+            <Text text="Enter output file name"/>
+            <TextField fx:id="fileNameTextField" maxWidth="300"/>
             <Button text="Load Json" fx:id="loadJsonButton"/>
             <Button text="Manual Simulation" fx:id="manualSimulationButton"/>
         </VBox>
